# dags

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: 01_download_rocket_launches.py  01_unscheduled.py  02_daily_cheduled.py  02_unscheduled.py  03_timedelta.py
data/: launches.json
data/data/: event_stats.csv  events.json
events-api/: Dockerfile  app.py
