[tool.poetry]
name = "dags"
version = "0.1.0"
description = ""
authors = ["ranog <jprnogueira@yahoo.com.br>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
poetry-plugin-export = "^1.9.0"
apache-airflow = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
ruff = "^0.11.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = ["I"]
exclude = [
    ".gitignore",
    ".git",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
